# events-face

./: Makefile  docker-compose.yaml  manage.py  pyproject.toml  setup.cfg
src/: urls.py
src/authapp/: apps.py  serializers.py  urls.py  views.py
src/authapp/management/commands/: create_superuser.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  apps.py  models.py  schemas.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py
